Updates to flask dashboard

--- a/flask-dashboard/templates/layout.html
+++ b/flask-dashboard/templates/layout.html
@@ -1,23 +1,9 @@
 <html>
 <head>
+    <link rel="stylesheet" href="../static/css/layout.css">
     <title>Website</title>
-    <link rel="stylesheet" type = "text/css" href="https://cdn.rawgit.com/sbstjn/timesheet.js/master/dist/timesheet.min.css">
-    <script src="https://cdn.rawgit.com/sbstjn/timesheet.js/master/dist/timesheet.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-
 <style>
 @import url(http://fonts.googleapis.com/css?family=Amatic+SC:700);
-
-body{
-    text-align: center;
-}
-h1{
-    font-family: 'Amatic SC', cursive;
-    font-weight: normal;
-    color: #8ac640;
-    font-size: 2.5em;
-}
-
 </style>
 
 </head>
@@ -26,26 +12,3 @@ h1{
 
 </body>
 </html>
-<script type=text/javascript>
-
-  function decodeJSON(encodedJSON) {
-    var decodedJSON = $('<div/>').html(encodedJSON).text();
-    return $.parseJSON(decodedJSON);
-  }
-
-  var myVar = '{{ lista }}';
-
-  new Timesheet('timesheet', 2002, 2013, [
-    decodeJSON(myVar),
-    ['06/2002', '09/2003', 'Some great memories', 'ipsum'],
-    ['2003', 'Had very bad luck'],
-    ['10/2003', '2006', 'At least had fun', 'dolor'],
-    ['02/2005', '05/2006', 'Enjoyed those times as well', 'ipsum'],
-    ['07/2005', '09/2005', 'Bad luck again', 'default'],
-    ['10/2005', '2008', 'For a long time nothing happened', 'dolor'],
-    ['01/2008', '05/2009', 'LOST Season #4', 'lorem'],
-    ['01/2009', '05/2009', 'LOST Season #4', 'lorem'],
-    ['02/2010', '05/2010', 'LOST Season #5', 'lorem'],
-    ['09/2008', '06/2010', 'FRINGE #1 & #2', 'ipsum']
-  ]);
-</script>
