--- a/flask-dashboard/templates/index.html
+++ b/flask-dashboard/templates/index.html
@@ -4,8 +4,7 @@
 </head>
 <div class="block1">
 <h1>Hello {{name}}!</h1>
-  <h2>Here is an interesting quote for you: </h2>
-  <p>
-  </p>
-  
-  {% endblock %}
+<h2>Here is an interesting Recipe for you: </h2>
+
+
+{% endblock %}
