things are alive and connected

--- a/flask-dashboard/templates/index.html
+++ b/flask-dashboard/templates/index.html
@@ -1,10 +1,6 @@
 {% extends "layout.html" %}
 
 {% block body %}
-</head>
-<div class="block1">
-<h1>Hello {{name}}!</h1>
-<h2>Here is an interesting Recipe for you: </h2>
-
-
+<div id="app"></div>
+<script src="../static/bundle.js"></script>
 {% endblock %}
