--- a/flask-dashboard/templates/layout.html
+++ b/flask-dashboard/templates/layout.html
@@ -4,6 +4,7 @@
     <title>Website</title>
 <style>
 @import url(http://fonts.googleapis.com/css?family=Amatic+SC:700);
+@import url(https://fonts.googleapis.com/css?family=Roboto:300,400,500);
 </style>
 
 </head>
