Added ui for front

--- a/flask-dashboard/templates/index.html
+++ b/flask-dashboard/templates/index.html
@@ -3,4 +3,151 @@
 {% block body %}
 <div id="app"></div>
 <script src="../static/bundle.js"></script>
+<!-- Add your content of header -->
+<header class="">
+  <div class="navbar navbar-default visible-xs">
+    <button type="button" class="navbar-toggle collapsed">
+      <span class="sr-only">Toggle navigation</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+    <a href="./index.html" class="navbar-brand">Recipe Revealer</a>
+  </div>
+
+  <nav class="sidebar">
+    <div class="navbar-collapse" id="navbar-collapse">
+      <div class="site-header hidden-xs">
+          <p class="site-brand" title="">
+            Recipe Revealer
+          </p>
+      </div>
+    </div>
+  </nav>
+</header>
+<main class="" id="main-collapse">
+
+<!-- Add your site or app content here -->
+
+<div class="hero-full-wrapper">
+  <div class="grid">
+  <div class="gutter-sizer"></div>
+    <div class="grid-sizer"></div>
+
+    <div class="grid-item">
+      <img class="img-responsive" alt="" src="../static/assets/images/img-12.jpg">
+      <a href="./project.html" class="project-description">
+        <div class="project-text-holder">
+          <div class="project-text-inner">
+            <h3>Vivamus vestibulum</h3>
+            <p>Discover more</p>
+          </div>
+        </div>
+      </a>
+    </div>
+
+
+    <div class="grid-item">
+      <img class="img-responsive" alt="" src="../static/assets/images/img-05.jpg">
+      <a href="./project.html" class="project-description">
+        <div class="project-text-holder">
+          <div class="project-text-inner">
+            <h3>Vivamus vestibulum</h3>
+            <p>Discover more</p>
+          </div>
+        </div>
+      </a>
+    </div>
+
+    <div class="grid-item">
+      <img class="img-responsive" alt="" src="../static/assets/images/img-13.jpg">
+      <a href="./project.html" class="project-description">
+        <div class="project-text-holder">
+          <div class="project-text-inner">
+            <h3>Vivamus vestibulum</h3>
+            <p>Discover more</p>
+          </div>
+        </div>
+      </a>
+    </div>
+    <div class="grid-item">
+      <img class="img-responsive" alt="" src="../static/assets/images/img-04.jpg">
+      <a href="./project.html" class="project-description">
+        <div class="project-text-holder">
+          <div class="project-text-inner">
+            <h3>Vivamus vestibulum</h3>
+            <p>Discover more</p>
+          </div>
+        </div>
+      </a>
+    </div>
+
+    <div class="grid-item">
+      <img class="img-responsive" alt="" src="../static/assets/images/img-07.jpg">
+      <a href="./project.html" class="project-description">
+        <div class="project-text-holder">
+          <div class="project-text-inner">
+            <h3>Vivamus vestibulum</h3>
+            <p>Discover more</p>
+          </div>
+        </div>
+      </a>
+    </div>
+
+    <div class="grid-item">
+      <img class="img-responsive" alt="" src="../static/assets/images/img-11.jpg">
+      <a href="./project.html" class="project-description">
+        <div class="project-text-holder">
+          <div class="project-text-inner">
+            <h3>Vivamus vestibulum</h3>
+            <p>Discover more</p>
+          </div>
+        </div>
+      </a>
+    </div>
+
+    <div class="grid-item">
+      <img class="img-responsive" alt="" src="../static/assets/images/img-10.jpg">
+      <a href="./project.html" class="project-description">
+        <div class="project-text-holder">
+          <div class="project-text-inner">
+            <h3>Vivamus vestibulum</h3>
+            <p>Discover more</p>
+          </div>
+        </div>
+      </a>
+    </div>
+    <div class="grid-item">
+      <img class="img-responsive" alt="" src="../static/assets/images/img-03.jpg">
+      <a href="./project.html" class="project-description">
+        <div class="project-text-holder">
+          <div class="project-text-inner">
+            <h3>Vivamus vestibulum</h3>
+            <p>Discover more</p>
+          </div>
+        </div>
+      </a>
+    </div>
+
+  </div>
+</div>
+
+
+<script>
+  document.addEventListener("DOMContentLoaded", function (event) {
+     masonryBuild();
+  });
+</script>
+
+</main>
+
+<script>
+document.addEventListener("DOMContentLoaded", function (event) {
+  navbarToggleSidebar();
+  navActivePage();
+});
+</script>
+
+<script type="text/javascript" src="../static/js/main.85741bff.js"></script>
+
 {% endblock %}
