--- a/flask-dashboard/templates/layout.html
+++ b/flask-dashboard/templates/layout.html
@@ -1,15 +1,28 @@
 <html>
 <head>
     <link rel="stylesheet" href="../static/css/layout.css">
-    <title>Website</title>
+    <meta charset="UTF-8">
+    <meta content="IE=edge" http-equiv="X-UA-Compatible">
+    <meta content="width=device-width,initial-scale=1" name="viewport">
+    <meta content="Page description" name="description">
+    <meta name="google" content="notranslate" />
+    <meta content="Mashup templates have been developped by Orson.io team" name="author">
+
+    <!-- Disable tap highlight on IE -->
+    <meta name="msapplication-tap-highlight" content="no">
+
+    <title>Title page</title>
+
+  <link href="../static/css/main.82cfd66e.css" rel="stylesheet">
+
 <style>
 @import url(http://fonts.googleapis.com/css?family=Amatic+SC:700);
 @import url(https://fonts.googleapis.com/css?family=Roboto:300,400,500);
 </style>
 
+
 </head>
 <body>
  {% block body %}{% endblock %}
-
 </body>
 </html>
