--- a/flask-dashboard/static/css/layout.css
+++ b/flask-dashboard/static/css/layout.css
@@ -8,3 +8,10 @@ h1{
     color: #8ac640;
     font-size: 2.5em;
 }
+
+#center{
+  align-content: center !important;
+}
+main{
+  margin: 0 !important;
+}
