added some styles and react components

--- a/flask-dashboard/templates/index.html
+++ b/flask-dashboard/templates/index.html
@@ -10,7 +10,7 @@
 <!-- Add your site or app content here -->
 
 <div class="hero-full-wrapper">
-
+ <h1> Recipe Revealer </h1>
   <div id="app"></div>
 
   <div class="grid">
@@ -19,7 +19,6 @@
 
     <div class="grid-item">
       <img class="img-responsive" alt="" src="../static/assets/images/img-12.jpg">
-      <a href="./project.html" class="project-description">
         <div class="project-text-holder">
           <div class="project-text-inner">
             <h3>Vivamus vestibulum</h3>
@@ -32,7 +31,6 @@
 
     <div class="grid-item">
       <img class="img-responsive" alt="" src="../static/assets/images/img-05.jpg">
-      <a href="./project.html" class="project-description">
         <div class="project-text-holder">
           <div class="project-text-inner">
             <h3>Vivamus vestibulum</h3>
@@ -44,7 +42,6 @@
 
     <div class="grid-item">
       <img class="img-responsive" alt="" src="../static/assets/images/img-13.jpg">
-      <a href="./project.html" class="project-description">
         <div class="project-text-holder">
           <div class="project-text-inner">
             <h3>Vivamus vestibulum</h3>
@@ -55,7 +52,6 @@
     </div>
     <div class="grid-item">
       <img class="img-responsive" alt="" src="../static/assets/images/img-04.jpg">
-      <a href="./project.html" class="project-description">
         <div class="project-text-holder">
           <div class="project-text-inner">
             <h3>Vivamus vestibulum</h3>
@@ -67,7 +63,6 @@
 
     <div class="grid-item">
       <img class="img-responsive" alt="" src="../static/assets/images/img-07.jpg">
-      <a href="./project.html" class="project-description">
         <div class="project-text-holder">
           <div class="project-text-inner">
             <h3>Vivamus vestibulum</h3>
@@ -79,7 +74,6 @@
 
     <div class="grid-item">
       <img class="img-responsive" alt="" src="../static/assets/images/img-11.jpg">
-      <a href="./project.html" class="project-description">
         <div class="project-text-holder">
           <div class="project-text-inner">
             <h3>Vivamus vestibulum</h3>
@@ -91,7 +85,6 @@
 
     <div class="grid-item">
       <img class="img-responsive" alt="" src="../static/assets/images/img-10.jpg">
-      <a href="./project.html" class="project-description">
         <div class="project-text-holder">
           <div class="project-text-inner">
             <h3>Vivamus vestibulum</h3>
@@ -102,7 +95,6 @@
     </div>
     <div class="grid-item">
       <img class="img-responsive" alt="" src="../static/assets/images/img-03.jpg">
-      <a href="./project.html" class="project-description">
         <div class="project-text-holder">
           <div class="project-text-inner">
             <h3>Vivamus vestibulum</h3>
