--- a/flask-dashboard/static/css/layout.css
+++ b/flask-dashboard/static/css/layout.css
@@ -3,7 +3,7 @@ body{
     text-align: center;
 }
 h1{
-    font-family: 'Amatic SC', cursive;
+    font-family: 'Homemade Apple', cursive !important;
     font-weight: normal;
     color: #8ac640;
     font-size: 2.5em;
@@ -14,4 +14,9 @@ h1{
 }
 main{
   margin: 0 !important;
+}
+
+#searchResult{
+  margin:50px;
+
 }
