added the finishing touches

--- a/flask-dashboard/templates/index.html
+++ b/flask-dashboard/templates/index.html
@@ -18,11 +18,10 @@
     <div class="grid-sizer"></div>
 
     <div class="grid-item">
-      <img class="img-responsive" alt="" src="../static/assets/images/img-12.jpg">
+      <img id= "image1" class="img-responsive" alt="" src="../static/assets/images/img-12.jpg">
         <div class="project-text-holder">
           <div class="project-text-inner">
-            <h3>Vivamus vestibulum</h3>
-            <p>Discover more</p>
+            <h3 id= "name1">Vivamus vestibulum</h3>
           </div>
         </div>
       </a>
@@ -30,75 +29,68 @@
 
 
     <div class="grid-item">
-      <img class="img-responsive" alt="" src="../static/assets/images/img-05.jpg">
+      <img id= "image2"class="img-responsive" alt="" src="../static/assets/images/img-05.jpg">
         <div class="project-text-holder">
           <div class="project-text-inner">
-            <h3>Vivamus vestibulum</h3>
-            <p>Discover more</p>
+            <h3 id= "name2">Vivamus vestibulum</h3>
           </div>
         </div>
       </a>
     </div>
 
     <div class="grid-item">
-      <img class="img-responsive" alt="" src="../static/assets/images/img-13.jpg">
+      <img id= "image3" class="img-responsive" alt="" src="../static/assets/images/img-13.jpg">
         <div class="project-text-holder">
           <div class="project-text-inner">
-            <h3>Vivamus vestibulum</h3>
-            <p>Discover more</p>
+            <h3 id= "name3">Vivamus vestibulum</h3>
           </div>
         </div>
       </a>
     </div>
     <div class="grid-item">
-      <img class="img-responsive" alt="" src="../static/assets/images/img-04.jpg">
+      <img id= "image4" class="img-responsive" alt="" src="../static/assets/images/img-04.jpg">
         <div class="project-text-holder">
           <div class="project-text-inner">
-            <h3>Vivamus vestibulum</h3>
-            <p>Discover more</p>
-          </div>
-        </div>
-      </a>
-    </div>
-
-    <div class="grid-item">
-      <img class="img-responsive" alt="" src="../static/assets/images/img-07.jpg">
-        <div class="project-text-holder">
-          <div class="project-text-inner">
-            <h3>Vivamus vestibulum</h3>
-            <p>Discover more</p>
+            <h3 id= "name4">Vivamus vestibulum</h3>
           </div>
         </div>
       </a>
     </div>
 
     <div class="grid-item">
-      <img class="img-responsive" alt="" src="../static/assets/images/img-11.jpg">
+      <img id= "image5" class="img-responsive" alt="" src="../static/assets/images/img-07.jpg">
         <div class="project-text-holder">
           <div class="project-text-inner">
-            <h3>Vivamus vestibulum</h3>
-            <p>Discover more</p>
+            <h3 id= "name5">Vivamus vestibulum</h3>
           </div>
         </div>
       </a>
     </div>
 
     <div class="grid-item">
-      <img class="img-responsive" alt="" src="../static/assets/images/img-10.jpg">
+      <img id= "image6" class="img-responsive" alt="" src="../static/assets/images/img-11.jpg">
         <div class="project-text-holder">
           <div class="project-text-inner">
-            <h3>Vivamus vestibulum</h3>
-            <p>Discover more</p>
+            <h3 id="name6">Vivamus vestibulum</h3>
+          </div>
+        </div>
+      </a>
+    </div>
+
+    <div class="grid-item">
+      <img id= "image7" class="img-responsive" alt="" src="../static/assets/images/img-10.jpg">
+        <div class="project-text-holder">
+          <div class="project-text-inner">
+            <h3 id= "name7">Vivamus vestibulum</h3>
           </div>
         </div>
       </a>
     </div>
     <div class="grid-item">
-      <img class="img-responsive" alt="" src="../static/assets/images/img-03.jpg">
+      <img id= "image8" class="img-responsive" alt="" src="../static/assets/images/img-03.jpg">
         <div class="project-text-holder">
           <div class="project-text-inner">
-            <h3>Vivamus vestibulum</h3>
-            <p>Discover more</p>
+            <h3 id= "name8">Vivamus vestibulum</h3>
           </div>
         </div>
       </a>
